addons/web/static/src/views/form/form_controller_m3.scss
// Specific CSS rules for M3 style

.o_form_view {
    @include media-breakpoint-down(md) {
        --field-spacing-unit: 8px;
        --o-box-border-size: 1px;

        %-o-field-box {
            border-radius: calc(.5 * var(--field-spacing-unit));
            border: var(--o-box-border-size) solid var(--o-input-border-color);
            padding: var(--field-spacing-unit) calc(1.5 * var(--field-spacing-unit));

            &:focus-within {
                @include print-variable(o-input-border-color, $o-action);
            }

            .o_input {
                border-width: 0;
            }

            h1, h2, h3, h4, h5, h6 {
                all: unset;
            }

            &:has(.o_required_modifier:not(.o_readonly_modifier)) {
                --o-box-border-size: 2px;
            }

            &:has(.o_field_widget.o_readonly_modifier):not(:has(.o_field_widget:not(.o_readonly_modifier))) {
                background: rgba($body-color, .04);
            }

            &:has(.o_field_invalid) {
                --o-input-border-color: #{o-text-color('danger')};
                background: #{$o-input-invalid-bg};

                .o_field_invalid {
                    --o-input-background-color: transparent;
                }
            }
        }

        %-o-field-label {
            width: max-content;
            transform: translate(calc(var(--field-spacing-unit)), calc(-.5 * var(--field-spacing-unit)));
            z-index: 1; // TODO finetune for quick create kanban
            padding: 0 calc(var(--field-spacing-unit) / 2) !important;
            border-radius: var(--field-spacing-unit);
            margin-bottom: 0 !important;

            // Hide the border of the adjacent sibling box that is under the label
            background-image: linear-gradient($o-view-background-color);
            background-size: 100% var(--o-box-border-size);
            background-position: center;
            background-repeat: no-repeat;
            background-color: transparent;

            // Same as ligne +/- 592; TODO merge the rules after maybe
            font-size: $font-size-sm !important;
            font-weight: $font-weight-bold !important;
            line-height: ROUND(down, 1.5em, 1px);

            & * {
                color: inherit !important;
                font-size: inherit !important;
                line-height: inherit !important;
                font-weight: inherit !important;
            }

            sup {
                color: $o-action !important;
                position: static;
            }
        }

        .o_inner_group {
            :is(.o_cell,.o_cell_custom):not(.o_wrap_label):not(.o_no_box):not(:has(.o_outlined)) {
                @extend %-o-field-box;

                a:has(i.fa), button.fa, .o_external_button {
                    height: calc(3 * var(--field-spacing-unit));
                    min-width: calc(3 * var(--field-spacing-unit));
                    color: var(--body-color);
                    background: var(--secondary-bg) !important;
                    padding: 0 !important;
                    border-radius: calc(1.5 * var(--field-spacing-unit));
                    justify-content: center;
                }
            }

            .o_wrap_label:has(+ .o_cell:not(.o_no_box)) {
                margin-bottom: calc(-1 * var(--body-font-size));

                .o_form_label {
                    @extend %-o-field-label;
                }

                &:has(+ * .o_required_modifier:not(.o_readonly_modifier)) {
                    --o-box-border-size: 2px;
                }

                &:has(+ *:focus-within) .o_form_label {
                    color: $o-action;
                }

                &:has(+ * .o_field_invalid) .o_form_label {
                    color: o-text-color('danger') !important;
                }

                // For o_readonly_modifier input label
                span.o_form_label {
                    display: inline-block;
                }
            }

            .o_wrap_field_inline .o_form_label {
                margin-inline-start: calc(1.5 * var(--field-spacing-unit));
                font-weight: $font-weight-bold;
            }

            .o_property_field.o_wrap_label {
                display: contents;

                .o_property_field_value {
                    @include print-variable(o-input-border-color, $o-form-lightsecondary);
                    @extend %-o-field-box;
                    margin-bottom: map-get($spacers, 3);
                }

                label {
                    @extend %-o-field-label;
                    width: max-content !important;
                    margin-bottom: calc(-1 * var(--body-font-size)) !important;

                    &:has(+ *:focus-within) {
                        color: $o-action;
                    }
                }
            }
        }

        .o_outlined {
            @extend %-o-field-box;

            &:is(h1, h2, h3, h4, h5, h6), :is(h1, h2, h3, h4, h5, h6) {
                font-size: inherit;
            }

            .o_field_widget {
                --fieldWidget-margin-bottom: 0px;
            }
        }

        .o_form_label:has(+ .o_outlined) {
            @extend %-o-field-label;
            display: block;
            width: max-content !important;
            margin-bottom: calc(-1 * var(--body-font-size)) !important;
        }
    }
}

